added draw to init

--- a/client.html
+++ b/client.html
@@ -82,7 +82,7 @@
 
     function init(callback) {
       recover()
-      draw();
+      draw()
     };
 
     function next(callback) {
@@ -105,7 +105,6 @@
         });
       }
     }
-
 
     function draw(arr, callback) {
       spinner.setReady();
